--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.7",
     "sass": "^1.57.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "sweetalert2": "^11.4.14",
+    "sweetalert2-react-content": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
