--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://chiayuuliu.github.io/myWebsite",
+  "homepage": "http://chiayuuliu.github.io/myWebsite",
   "name": "mywebsite",
   "version": "0.1.0",
   "private": true,
